2003-10-02  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m-proc.el (w3m-process-filter): Check return value of
	`w3m-process-handler-parent-buffer' to move current buffer safely.

2003-10-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-modeline-image-status-on,
	w3m-modeline-process-status-on, w3m-modeline-ssl-image-status-on,
	w3m-modeline-ssl-status-off, w3m-modeline-status-off): Use `defvar'
	instead of `defconst'.
	(w3m-buffer-setup): Call `w3m-initialize-graphic-icons' instead of
	`w3m-make-spinner-image'; simplify the value for
	`mode-line-buffer-identification'.

	* w3m-xmas.el (w3m-xmas-space-before-modeline-icon): Rename from
	`w3m-xmas-space-before-spinner'.
	(w3m-modeline-process-status-on-icon,
	w3m-modeline-image-status-on-icon, w3m-modeline-status-off-icon,
	w3m-modeline-ssl-image-status-on-icon,
	w3m-modeline-ssl-status-off-icon): New variables.
	(w3m-spinner-image): Abolish.
	(w3m-make-spinner-image): Abolish.
	(w3m-initialize-graphic-icons): New function.

	* icons/state-00.xpm:
	* icons/state-01.xpm:
	* icons/state-10.xpm:
	* icons/state-11.xpm: New files.

2003-10-02  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>

	* w3m.el (w3m-halfdump-command-arguments): Add "ucs_conv" option
	when using w3m-m17n; check w3m-output-coding-system at run time.

2003-10-02  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-proc.el (w3m-process-start-after): Make sure the value for
	`w3m-current-buffer' is non-nil.

2003-10-02  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-process-modeline-format): New option.
	(w3m-buffer-setup): Set `mode-line-process'.

	* w3m-proc.el: Bind `w3m-process-modeline-format' to suppress
	byte-compile warning.
	(w3m-process-modeline-string): New buffer-local variable.
	(w3m-process-start-after): Reset the above variable.
	(w3m-process-filter): Check size of retrieved data and set the
	above variable.
	(w3m-process-modeline-format): New function.

2003-10-02  Katsumi Yamaoka  <yamaoka@jpl.org>
